--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js",
+    "start": "nodemon ./app.js",
     "deploy": "git push heroku master"
   },
   "repository": {
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/lukewalt/order-app#readme",
   "dependencies": {
+    "bookshelf": "^0.10.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "knex": "^0.12.9",
+    "pg": "^6.1.5",
     "pug": "^2.0.0-beta11"
   }
 }
