--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/lukewalt/order-app#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "bookshelf": "^0.10.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
