changed order template

--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "bookshelf": "^0.10.3",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.2",
     "knex": "^0.12.9",
     "pg": "^6.1.5",
     "pug": "^2.0.0-beta11"
